--- a/BookSaleProject/src/main/resources/templates/Cart.html
+++ b/BookSaleProject/src/main/resources/templates/Cart.html
@@ -74,8 +74,8 @@
                             <tbody>
                                 <tr th:each="cartProBox, status : ${cartBookList}">
                                     <th class="align-middle">
-                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel"
-                                            onchange="calculateOrderTotal(this)" />
+                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel" 
+                                            onclick="calculateOrderTotal()" id="${cartProBox.key.id}"/>
                                     </th>
                                     <th scope="row">
                                         <div class="d-flex align-items-center">
@@ -141,7 +141,7 @@
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="button" data-mdb-button-init data-mdb-ripple-init
-                            class="btn btn-primary btn-lg">Thanh toán</button>
+                            class="btn btn-primary btn-lg" onclick="handlePayment()">Thanh toán</button>
                     </div>
                 </div>
             </div>
