--- a/BookSaleProject/src/main/resources/templates/Cart.html
+++ b/BookSaleProject/src/main/resources/templates/Cart.html
@@ -71,11 +71,14 @@
                                     <th scope="col"></th>
                                 </tr>
                             </thead>
+                            <!-- <tbody th:if="${cartBookList.key.id}==null">
+                                <p class="h1">Không có đơn hàng trong giỏ</p>
+                            </tbody> -->
                             <tbody>
                                 <tr th:each="cartProBox, status : ${cartBookList}">
                                     <th class="align-middle">
-                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel" 
-                                            onclick="calculateOrderTotal()" id="${cartProBox.key.id}"/>
+                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel"
+                                            onclick="calculateOrderTotal()" th:id="${cartProBox.key.id}" />
                                     </th>
                                     <th scope="row">
                                         <div class="d-flex align-items-center">
@@ -132,7 +135,7 @@
 
                             <div class="float-end">
                                 <p class="mb-0 me-5 d-flex align-items-center">
-                                    <span class="small text-muted me-2">Order total:</span> 
+                                    <span class="small text-muted me-2">Order total:</span>
                                     <span class="lead fw-normal order-total" name="OrderTotal">0đ</span>
                                 </p>
                             </div>
@@ -140,8 +143,8 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-end">
-                        <button type="button" data-mdb-button-init data-mdb-ripple-init
-                            class="btn btn-primary btn-lg" onclick="handlePayment()">Thanh toán</button>
+                        <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
+                            onclick="handlePayment()">Thanh toán</button>
                     </div>
                 </div>
             </div>
@@ -149,7 +152,47 @@
 
     <footer th:insert="~{footer :: footer}"></footer>
 
-    <script th:src="@{/js/Cart.js}"></script>
+    <script th:inline="javascript">
+        function toggleCheckboxes(source) {
+            checkboxes = document.getElementsByName('checkBoxNoLabel');
+            for (var i = 0, n = checkboxes.length; i < n; i++) {
+                checkboxes[i].checked = source.checked;
+            }
+            calculateOrderTotal();
+        }
+
+        var selectedIds = [];
+
+        function calculateOrderTotal() {
+            var checkboxes = document.getElementsByName('checkBoxNoLabel');
+            var orderTotal = 0;
+            selectedIds = [];
+
+            for (var i = 0; i < checkboxes.length; i++) {
+                if (checkboxes[i].checked) {
+                    selectedIds.push(checkboxes[i].id);
+                    var price = parseFloat(checkboxes[i].parentNode.parentNode.querySelector('.price').innerText);
+                    orderTotal += price;
+                }
+            }
+
+            var orderTotalElement = document.querySelector('.order-total');
+            if (orderTotalElement) {
+                orderTotalElement.innerText = orderTotal + 'đ';
+            }
+
+            window.onload = toggleCheckboxes;
+        }
+
+        // Hàm để xử lý sự kiện khi nút thanh toán được nhấn
+        function handlePayment() {
+            // Chuyển mảng selectedIds sang chuỗi để gửi đến servlet
+            var selectedIdsString = selectedIds.join(",");
+
+            // Gửi các ID đã chọn đến servlet bằng cách chuyển hướng URL
+            window.location.href = "/bill/viewPayment?selectedIds=" + selectedIdsString;
+        }
+    </script>
 </body>
 
 </html>
