--- a/BookSaleProject/src/main/resources/templates/Cart.html
+++ b/BookSaleProject/src/main/resources/templates/Cart.html
@@ -71,63 +71,65 @@
                                     <th scope="col"></th>
                                 </tr>
                             </thead>
-                            <!-- <tbody th:if="${cartBookList.key.id}==null">
-                                <p class="h1">Không có đơn hàng trong giỏ</p>
-                            </tbody> -->
-                            <tbody>
-                                <tr th:each="cartProBox, status : ${cartBookList}">
-                                    <th class="align-middle">
-                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel"
-                                            onclick="calculateOrderTotal()" th:id="${cartProBox.key.id}" />
-                                    </th>
-                                    <th scope="row">
-                                        <div class="d-flex align-items-center">
-                                            <img th:src="@{'/images/'+${cartProBox.key.book.img}}"
-                                                class="img-fluid rounded-3" style="width: 120px;" alt="Book">
-                                            <div class="flex-column ms-4">
-                                                <p class="mb-2" name="name" th:text="${cartProBox.key.book.name}"></p>
-                                                <p class="mb-0" name="author" th:text="${cartProBox.key.book.author}">
-                                                </p>
+                            <div th:unless="${check}==0">
+                                <tbody>
+                                    <tr th:each="cartProBox, status : ${cartBookList}">
+                                        <th class="align-middle">
+                                            <input class="form-check-input" type="checkbox" name="checkBoxNoLabel"
+                                                onclick="checkBoxFunction()" th:id="${cartProBox.key.id}" />
+                                        </th>
+                                        <th scope="row">
+                                            <div class="d-flex align-items-center">
+                                                <img th:src="@{'/images/'+${cartProBox.key.book.img}}"
+                                                    class="img-fluid rounded-3" style="width: 120px;" alt="Book">
+                                                <div class="flex-column ms-4">
+                                                    <p class="mb-2" name="name" th:text="${cartProBox.key.book.name}">
+                                                    </p>
+                                                    <p class="mb-0" name="author"
+                                                        th:text="${cartProBox.key.book.author}">
+                                                    </p>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </th>
-                                    <td class="align-middle">
-                                        <p class="mb-0" style="font-weight: 500;"
-                                            th:text="${cartProBox.key.book.bookType.name}"></p>
-                                    </td>
-                                    <form th:action="@{/cart/update/__${cartProBox.key.id}__}" th:method="post">
+                                        </th>
                                         <td class="align-middle">
-                                            <div class="d-flex flex-row">
-                                                <button data-mdb-button-init data-mdb-ripple-init
-                                                    class="btn btn-link px-2" type="submit"
-                                                    onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                                                    <i class="fas fa-minus"></i>
-                                                </button>
-
-                                                <input min="0" name="quantity" th:value="${cartProBox.key.SL}"
-                                                    type="number" class="form-control form-control-sm"
-                                                    style="width: 50px;" />
-
-                                                <button data-mdb-button-init data-mdb-ripple-init
-                                                    class="btn btn-link px-2" type="submit"
-                                                    onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                                                    <i class="fas fa-plus"></i>
-                                                </button>
-                                            </div>
+                                            <p class="mb-0" style="font-weight: 500;"
+                                                th:text="${cartProBox.key.book.bookType.name}"></p>
                                         </td>
-                                    </form>
+                                        <form th:action="@{/cart/update/__${cartProBox.key.id}__}" th:method="post">
+                                            <td class="align-middle">
+                                                <div class="d-flex flex-row">
+                                                    <button data-mdb-button-init data-mdb-ripple-init
+                                                        class="btn btn-link px-2" type="submit"
+                                                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                                        <i class="fas fa-minus"></i>
+                                                    </button>
 
-                                    <td class="align-middle price">
-                                        <p class="mb-0" style="font-weight: 500;" th:text="${cartProBox.value+'đ'}"></p>
-                                    </td>
-                                    <form th:action="@{/cart/delete/__${cartProBox.key.id}__}" th:method="post">
-                                        <td class="align-middle">
-                                            <button type="submit" class="text-danger"><i
-                                                    class="fas fa-trash fa-lg"></i></button>
+                                                    <input min="0" name="quantity" th:value="${cartProBox.key.SL}"
+                                                        type="number" class="form-control form-control-sm"
+                                                        style="width: 50px;" />
+
+                                                    <button data-mdb-button-init data-mdb-ripple-init
+                                                        class="btn btn-link px-2" type="submit"
+                                                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                                        <i class="fas fa-plus"></i>
+                                                    </button>
+                                                </div>
+                                            </td>
+                                        </form>
+
+                                        <td class="align-middle price">
+                                            <p class="mb-0" style="font-weight: 500;" th:text="${cartProBox.value+'đ'}">
+                                            </p>
                                         </td>
-                                    </form>
-                                </tr>
-                            </tbody>
+                                        <form th:action="@{/cart/delete/__${cartProBox.key.id}__}" th:method="post">
+                                            <td class="align-middle">
+                                                <button type="submit" class="text-danger"><i
+                                                        class="fas fa-trash fa-lg"></i></button>
+                                            </td>
+                                        </form>
+                                    </tr>
+                                </tbody>
+                            </div>
                         </table>
                     </div>
                     <div class="card mb-5">
@@ -144,7 +146,7 @@
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
-                            onclick="handlePayment()">Thanh toán</button>
+                            onclick="handlePayment()" disabled>Thanh toán</button>
                     </div>
                 </div>
             </div>
@@ -158,18 +160,21 @@
             for (var i = 0, n = checkboxes.length; i < n; i++) {
                 checkboxes[i].checked = source.checked;
             }
-            calculateOrderTotal();
+            checkBoxFunction();
         }
 
         var selectedIds = [];
 
-        function calculateOrderTotal() {
+        function checkBoxFunction() {
             var checkboxes = document.getElementsByName('checkBoxNoLabel');
+            var paymentButton = document.querySelector('.btn-primary');
             var orderTotal = 0;
+            var atLeastOneChecked = false;
             selectedIds = [];
 
             for (var i = 0; i < checkboxes.length; i++) {
                 if (checkboxes[i].checked) {
+                    atLeastOneChecked = true;
                     selectedIds.push(checkboxes[i].id);
                     var price = parseFloat(checkboxes[i].parentNode.parentNode.querySelector('.price').innerText);
                     orderTotal += price;
@@ -179,6 +184,12 @@
             var orderTotalElement = document.querySelector('.order-total');
             if (orderTotalElement) {
                 orderTotalElement.innerText = orderTotal + 'đ';
+            }
+
+            if (atLeastOneChecked) {
+                paymentButton.removeAttribute('disabled'); // Kích hoạt nút "Thanh toán"
+            } else {
+                paymentButton.setAttribute('disabled', 'disabled'); // Vô hiệu hóa nút "Thanh toán"
             }
 
             window.onload = toggleCheckboxes;
